--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -1,29 +1,36 @@
-label.gender.MALE=Male
-label.gender.FEMALE=Female
-label.gender.OTHER=Other
+label.lookup.lookupKeyword.EDUCATION=Education
+label.lookup.lookupKeyword.PROFESSION=Profession
 
-label.bloodGroup.A_POS=A+ 
-label.bloodGroup.A_NEG=A-
-label.bloodGroup.B_POS=B+ 
-label.bloodGroup.B_NEG=B-
-label.bloodGroup.AB_POS=AB+
-label.bloodGroup.AB_NEG=AB-
-label.bloodGroup.O_POS=O+ 
-label.bloodGroup.O_NEG=O-
+label.report.reportFormat.PDF=PDF
+label.report.reportFormat.HTML=HTML
+label.report.reportFormat.RTF=RTF
 
-label.maritalSts.SINGLE=Single
-label.maritalSts.MARRIED=Married
-label.maritalSts.SEPARATED=Separated
-label.maritalSts.DIVORCED=Divorced
-label.maritalSts.WIDOWED=Widowed
+label.allEnum.gender.MALE=Male
+label.allEnum.gender.FEMALE=Female
+label.allEnum.gender.OTHER=Other
 
-label.religion.ISLAM=Islam 
-label.religion.HINDUISM=Hinduism 
-label.religion.BUDDHISM=Buddhism
-label.religion.CHRISTIANITY=Christianity 
-label.religion.JUDAISM=Judaism 
-label.religion.SIKHISM=Sikhism 
-label.religion.OTHER=Other
+label.allEnum.bloodGroup.A_POS=A+ 
+label.allEnum.bloodGroup.A_NEG=A-
+label.allEnum.bloodGroup.B_POS=B+ 
+label.allEnum.bloodGroup.B_NEG=B-
+label.allEnum.bloodGroup.AB_POS=AB+
+label.allEnum.bloodGroup.AB_NEG=AB-
+label.allEnum.bloodGroup.O_POS=O+ 
+label.allEnum.bloodGroup.O_NEG=O-
+
+label.allEnum.maritalSts.SINGLE=Single
+label.allEnum.maritalSts.MARRIED=Married
+label.allEnum.maritalSts.SEPARATED=Separated
+label.allEnum.maritalSts.DIVORCED=Divorced
+label.allEnum.maritalSts.WIDOWED=Widowed
+
+label.allEnum.religion.ISLAM=Islam 
+label.allEnum.religion.HINDUISM=Hinduism 
+label.allEnum.religion.BUDDHISM=Buddhism
+label.allEnum.religion.CHRISTIANITY=Christianity 
+label.allEnum.religion.JUDAISM=Judaism 
+label.allEnum.religion.SIKHISM=Sikhism 
+label.allEnum.religion.OTHER=Other
 
 error.message.not.found.logged=error.message.not.found.logged
 error.message.not.found.deleted=error.message.not.found.deleted
@@ -41,6 +48,7 @@ list.link.label=List
 create.link.label=Create New
 edit.link.label=Edit
 delete.link.label=Erase
+erase.button.label=Erase
 show.link.label=Show
 copy.link.label=Copy
 edit.page.submit.label=Update
@@ -156,6 +164,7 @@ endDate=End Date
 envs=Envs
 favorites=Favorites
 fieldAttribute=Field Attribute
+fileName=File Name
 firstName=First Name
 fullName=Full Name
 gender=Gender
@@ -171,6 +180,8 @@ language=Language
 lastName=Last Name
 login=Login
 logout=Logout
+lookup=Lookup
+lookupKeyword=Lookup Keyword
 make.new.user=Create New User
 maritalSts=Marital Status
 marriageDate=Marriage Date
@@ -185,7 +196,7 @@ nickName=Nick Name
 nid=NID
 noOfChild=No of Child
 notifiedTo=Notified To
-org=Org
+org=Organization
 orgUnitType=Org Unit Type
 originatedBy=Originated By
 paramName=Param Name
@@ -209,6 +220,7 @@ property=Property
 recommendBy=Recommend By
 religion=Religion
 remarks=Remarks
+reportGroup=Report Group
 root=Root
 rootHead=Root Head
 sal=Salary
@@ -220,6 +232,7 @@ state=State
 street=Street
 submitDate=Submit Date
 submittedBy=Submitted By
+supportFormats=Support Formats
 text=Text
 title=Title
 user=User
@@ -238,6 +251,7 @@ updateByUser=Update By User
 updateDate=Update Date 
 
 default.foundRec=Found {0} Record
+default.open.in.new.page=Open in New Page
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
@@ -268,7 +282,8 @@ default.updated.message={0} {1} updated
 default.deleted.message={0} {1} deleted
 default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
-default.optimistic.locking.failure=Another user has updated this {0} while you were editing
+default.optimistic.locking.failure.edit=Another user has updated while you are editing
+default.optimistic.locking.failure.copy=Another user has updated while you are copying
 
 default.home.label=Home
 default.list.label={0} List
