--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -1,29 +1,36 @@
-label.gender.MALE=\u09aa\u09c1\u09b0\u09c1\u09b7
-label.gender.FEMALE=\u09ae\u09b9\u09bf\u09b2\u09be
-label.gender.OTHER=\u0985\u09a8\u09cd\u09af\u09be\u09a8\u09cd\u09af
+label.lookup.lookupKeyword.EDUCATION=\u09b6\u09bf\u0995\u09cd\u09b7\u09be
+label.lookup.lookupKeyword.PROFESSION=\u09aa\u09c7\u09b6\u09be
 
-label.bloodGroup.A_POS=\u098f+
-label.bloodGroup.A_NEG=\u098f-
-label.bloodGroup.B_POS=\u09ac\u09bf+ 
-label.bloodGroup.B_NEG=\u09ac\u09bf-
-label.bloodGroup.AB_POS=\u098f\u09ac\u09bf+
-label.bloodGroup.AB_NEG=\u098f\u09ac\u09bf-
-label.bloodGroup.O_POS=\u0993+ 
-label.bloodGroup.O_NEG=\u0993-
+label.report.reportFormat.PDF=\u09aa\u09bf\u09a1\u09bf\u098f\u09ab
+label.report.reportFormat.HTML=\u098f\u0987\u099a\u099f\u09bf\u098f\u09ae\u098f\u09b2
+label.report.reportFormat.RTF=\u0986\u09b0\u099f\u09bf\u098f\u09ab
 
-label.maritalSts.SINGLE=\u0985\u09ac\u09bf\u09ac\u09be\u09b9\u09bf\u09a4
-label.maritalSts.MARRIED=\u09ac\u09bf\u09ac\u09be\u09b9\u09bf\u09a4
-label.maritalSts.SEPARATED=\u09ac\u09bf\u099b\u09bf\u09a8\u09cd\u09a8
-label.maritalSts.DIVORCED=\u09a4\u09be\u09b2\u09be\u0995\u09aa\u09cd\u09b0\u09be\u09aa\u09cd\u09a4
-label.maritalSts.WIDOWED=\u09ac\u09bf\u09a7\u09ac\u09be/\u09ac\u09bf\u09aa\u09a4\u09cd\u09a8\u09c0\u0995
+label.allEnum.gender.MALE=\u09aa\u09c1\u09b0\u09c1\u09b7
+label.allEnum.gender.FEMALE=\u09ae\u09b9\u09bf\u09b2\u09be
+label.allEnum.gender.OTHER=\u0985\u09a8\u09cd\u09af\u09be\u09a8\u09cd\u09af
 
-label.religion.ISLAM=\u0987\u09b8\u09b2\u09be\u09ae
-label.religion.HINDUISM=\u09b9\u09bf\u09a8\u09cd\u09a6\u09c1\u09a7\u09b0\u09cd\u09ae
-label.religion.BUDDHISM=\u09ac\u09cc\u09a6\u09cd\u09a7\u09a7\u09b0\u09cd\u09ae
-label.religion.CHRISTIANITY=\u0996\u09cd\u09b0\u09c0\u09b7\u09cd\u099f\u09a7\u09b0\u09cd\u09ae
-label.religion.JUDAISM=\u0987\u09b9\u09c1\u09a6\u09c0
-label.religion.SIKHISM=\u09b6\u09bf\u0996 
-label.religion.OTHER=\u0985\u09a8\u09cd\u09af\u09be\u09a8\u09cd\u09af
+label.allEnum.bloodGroup.A_POS=\u098f+
+label.allEnum.bloodGroup.A_NEG=\u098f-
+label.allEnum.bloodGroup.B_POS=\u09ac\u09bf+ 
+label.allEnum.bloodGroup.B_NEG=\u09ac\u09bf-
+label.allEnum.bloodGroup.AB_POS=\u098f\u09ac\u09bf+
+label.allEnum.bloodGroup.AB_NEG=\u098f\u09ac\u09bf-
+label.allEnum.bloodGroup.O_POS=\u0993+ 
+label.allEnum.bloodGroup.O_NEG=\u0993-
+
+label.allEnum.maritalSts.SINGLE=\u0985\u09ac\u09bf\u09ac\u09be\u09b9\u09bf\u09a4
+label.allEnum.maritalSts.MARRIED=\u09ac\u09bf\u09ac\u09be\u09b9\u09bf\u09a4
+label.allEnum.maritalSts.SEPARATED=\u09ac\u09bf\u099b\u09bf\u09a8\u09cd\u09a8
+label.allEnum.maritalSts.DIVORCED=\u09a4\u09be\u09b2\u09be\u0995\u09aa\u09cd\u09b0\u09be\u09aa\u09cd\u09a4
+label.allEnum.maritalSts.WIDOWED=\u09ac\u09bf\u09a7\u09ac\u09be/\u09ac\u09bf\u09aa\u09a4\u09cd\u09a8\u09c0\u0995
+
+label.allEnum.religion.ISLAM=\u0987\u09b8\u09b2\u09be\u09ae
+label.allEnum.religion.HINDUISM=\u09b9\u09bf\u09a8\u09cd\u09a6\u09c1\u09a7\u09b0\u09cd\u09ae
+label.allEnum.religion.BUDDHISM=\u09ac\u09cc\u09a6\u09cd\u09a7\u09a7\u09b0\u09cd\u09ae
+label.allEnum.religion.CHRISTIANITY=\u0996\u09cd\u09b0\u09c0\u09b7\u09cd\u099f\u09a7\u09b0\u09cd\u09ae
+label.allEnum.religion.JUDAISM=\u0987\u09b9\u09c1\u09a6\u09c0
+label.allEnum.religion.SIKHISM=\u09b6\u09bf\u0996 
+label.allEnum.religion.OTHER=\u0985\u09a8\u09cd\u09af\u09be\u09a8\u09cd\u09af
 
 error.message.not.found.logged=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09b2\u0997 \u09a8\u09be \u0995\u09b0\u09be
 error.message.not.found.deleted=\u09aa\u09be\u0993\u09af\u09bc\u09be \u09a4\u09cd\u09b0\u09c1\u099f\u09bf \u09ac\u09be\u09b0\u09cd\u09a4\u09be \u09ae\u09c1\u099b\u09c7 \u09a8\u09be \u09ab\u09c7\u09b2\u09be
@@ -40,7 +47,8 @@ welcome.label=\u09b8\u09cd\u09ac\u09be\u0997\u09a4\u09ae
 list.link.label=\u09a4\u09be\u09b2\u09bf\u0995\u09be
 create.link.label=\u09a8\u09a4\u09c1\u09a8 \u09a4\u09c8\u09b0\u09bf \u0995\u09b0\u09c1\u09a8
 edit.link.label=\u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8 \u0995\u09b0\u09be
-delete.link.label=\u09ac\u09be\u09a6 \u09a6\u09bf\u09a8
+delete.link.label=\u09ae\u09c1\u099b\u09c7 \u09ab\u09c7\u09b2\u09be
+erase.button.label=\u09ae\u09c1\u099b\u09c7 \u09ab\u09c7\u09b2\u09be
 show.link.label=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8
 copy.link.label=\u09aa\u09cd\u09b0\u09a4\u09bf\u09b2\u09bf\u09aa\u09bf
 edit.page.submit.label=\u0986\u09aa\u09a1\u09c7\u099f
@@ -88,7 +96,7 @@ footer.capital.oith=\u0985\u0987\u09a5
 
 project.title.create=\u0985\u0987\u09a5 \u09b8\u09c3\u09b7\u09cd\u099f\u09bf
 project.title.edit=\u0985\u0987\u09a5 \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8\u09be
-project.title.copy=\u0985\u0987\u09a5 Copy
+project.title.copy=\u0985\u0987\u09a5 \u09aa\u09cd\u09b0\u09a4\u09bf\u09b2\u09bf\u09aa\u09bf
 project.title.index=\u0985\u0987\u09a5 \u09b8\u09c2\u099a\u09a8\u09be
 project.title.show=\u0985\u0987\u09a5 \u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8\u09c0
 
@@ -102,9 +110,9 @@ accountNonLocked=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u
 action=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc\u09a8
 active=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc?
 address=\u09a0\u09bf\u0995\u09be\u09a8\u09be
-addressType=\u09a0\u09bf\u0995\u09be\u09a8\u09be Type
-amountCr=Amount Cr
-amountDr=Amount Dr
+addressType=\u09a0\u09bf\u0995\u09be\u09a8\u09be \u09b6\u09cd\u09b0\u09c7\u09a3\u09c0
+amountCr=\u09aa\u09b0\u09bf\u09ae\u09be\u09a3 \u0995\u09cd\u09b0\u09c7\u09a1\u09bf\u099f
+amountDr=\u09aa\u09b0\u09bf\u09ae\u09be\u09a3 \u09a1\u09c7\u09ac\u09bf\u099f
 approvedBy=\u0985\u09a8\u09c1\u09ae\u09cb\u09a6\u09a8 \u0995\u09b0\u09c7\u099b\u09c7\u09a8
 audit=\u09a8\u09bf\u09b0\u09c0\u0995\u09cd\u09b7\u09be
 auditor=\u09a8\u09bf\u09b0\u09c0\u0995\u09cd\u09b7\u0995
@@ -112,8 +120,8 @@ authorities=\u0995\u09b0\u09cd\u09a4\u09c3\u09a4\u09cd\u09ac
 bank=\u09ac\u09cd\u09af\u09be\u0982\u0995
 bloodGroup=\u09b0\u0995\u09cd\u09a4\u09c7\u09b0 \u0997\u09cd\u09b0\u09c1\u09aa
 businessArea=Business Area
-careOf=Care Of
-checkedBy=Checked By
+careOf=\u0985\u09ad\u09bf\u09ad\u09be\u09ac\u0995
+checkedBy=\u09aa\u09b0\u09bf\u0995\u09cd\u09b7\u09c0\u09a4
 chequeDate=Cheque Date
 chequeNo=Cheque No
 chestSize=\u09ac\u09c1\u0995\u09c7\u09b0 \u0986\u0995\u09be\u09b0
@@ -122,27 +130,27 @@ className=Class Name
 client=\u0996\u09b0\u09bf\u09a6\u09cd\u09a6\u09be\u09b0
 cmd=Cmd
 coa=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u099a\u09be\u09b0\u09cd\u099f
-coaOpposite=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u099a\u09be\u09b0\u09cd\u099f Opposite
+coaOpposite=\u0985\u09cd\u09af\u09be\u0995\u09be\u0989\u09a8\u09cd\u099f \u099a\u09be\u09b0\u09cd\u099f \u09ac\u09bf\u09aa\u09b0\u09c0\u09a4
 code=\u0995\u09cb\u09a1
 company=\u0995\u09cb\u09ae\u09cd\u09aa\u09be\u09a8\u09bf
-companyCode=\u0995\u09cb\u09ae\u09cd\u09aa\u09be\u09a8\u09bf Code
+companyCode=\u0995\u09cb\u09ae\u09cd\u09aa\u09be\u09a8\u09bf \u0995\u09cb\u09a1
 contactInfo=\u09af\u09cb\u0997\u09be\u09af\u09cb\u0997\u09c7\u09b0 \u09a4\u09a5\u09cd\u09af
 contactPersonPrimary=\u09ac\u09cd\u09af\u0995\u09cd\u09a4\u09bf \u09af\u09cb\u0997\u09be\u09af\u09cb\u0997 \u09aa\u09cd\u09b0\u09be\u09a5\u09ae\u09bf\u0995
 contactPersonSecondary=\u09ac\u09cd\u09af\u0995\u09cd\u09a4\u09bf \u09af\u09cb\u0997\u09be\u09af\u09cb\u0997 \u0986\u09a8\u09c1\u09b7\u0999\u09cd\u0997\u09bf\u0995
-content=Content
-controller=Controller
-costCenter=Cost Center
+content=\u09ac\u09bf\u09b7\u09af\u09bc\u09ac\u09b8\u09cd\u09a4\u09c1
+controller=\u09a8\u09bf\u09df\u09a8\u09cd\u09a4\u09cd\u09b0\u09a3\u0995\u09be\u09b0\u09c0
+costCenter=\u0996\u09b0\u099a \u0995\u09c7\u09a8\u09cd\u09a6\u09cd\u09b0
 country=\u09a6\u09c7\u09b6
 credentialsNonExpired=\u09aa\u09b0\u09bf\u099a\u09af\u09bc\u09aa\u09a4\u09cd\u09b0 \u09a8\u09a8 \u098f\u0995\u09cd\u09b8\u09aa\u09be\u09af\u09bc\u09be\u09b0
-currency=Currency
+currency=\u09ae\u09c1\u09a6\u09cd\u09b0\u09be
 defaultVal=Default Value
 desc=\u09ac\u09bf\u09ac\u09b0\u09a3
 description=\u09ac\u09bf\u09ac\u09b0\u09a3
 designation=\u0989\u09aa\u09be\u09a7\u09bf
 divisions=Divisions
 dob=\u099c\u09a8\u09cd\u09ae \u09a4\u09be\u09b0\u09bf\u0996
-doe=Date of Expire
-doj=Date of Join
+doe=\u09ae\u09c7\u09af\u09bc\u09be\u09a6 \u09b6\u09c7\u09b7 \u09b9\u0993\u09af\u09bc\u09be\u09b0 \u09a4\u09be\u09b0\u09bf\u0996
+doj=\u09af\u09cb\u0997\u09a6\u09be\u09a8 \u09a4\u09be\u09b0\u09bf\u0996
 edu=\u09b6\u09bf\u0995\u09cd\u09b7\u09be
 elementPole=Element Pole
 email=\u0987-\u09ae\u09c7\u0987\u09b2 
@@ -156,21 +164,24 @@ endDate=\u09b6\u09c7\u09b7 \u09a4\u09be\u09b0\u09bf\u0996
 envs=Envs
 favorites=\u09aa\u099b\u09a8\u09cd\u09a6\u09b8\u0987
 fieldAttribute=Field Attribute
+fileName=Fael Nam
 firstName=\u09aa\u09cd\u09b0\u09a5\u09ae \u09a8\u09be\u09ae
 fullName=\u09aa\u09cd\u09b0\u09a6\u09b0\u09cd\u09b6\u09a8\u09c0 \u09a8\u09be\u09ae
 gender=\u09b2\u09bf\u0999\u09cd\u0997
-grade=Grade
+grade=\u09aa\u09a6\u09ae\u09b0\u09cd\u09af\u09be\u09a6\u09be
 height=\u0989\u099a\u09cd\u099a\u09a4\u09be
 helpText=Help Text
-holding=Holding
-id=ID
-interval=Interval
+holding=\u09b9\u09cb\u09b2\u09cd\u09a1\u09bf\u0982
+id=\u0986\u0987\u09a1\u09bf
+interval=\u09ae\u09a7\u09cd\u09af\u09ac\u09b0\u09cd\u09a4\u09c0 \u09b8\u09ae\u09af\u09bc
 isActive=\u09b8\u0995\u09cd\u09b0\u09bf\u09af\u09bc
-isMandatory=Is Mandatory
+isMandatory=\u09ac\u09be\u09a7\u09cd\u09af\u09a4\u09be ?
 language=\u09ad\u09be\u09b7\u09be
 lastName=\u09b6\u09c7\u09b7 \u09a8\u09be\u09ae
 login=\u09b2\u0997\u0987\u09a8
 logout=\u09a4\u09cd\u09af\u09be\u0997 \u0995\u09b0\u09c1\u09a8
+lookup=\u09b8\u09be\u09a7\u09be\u09b0\u09a3 \u09a4\u09a5\u09cd\u09af
+lookupKeyword=\u09b8\u09be\u09a7\u09be\u09b0\u09a3 \u09a4\u09a5\u09cd\u09af \u09a8\u09ae\u09c1\u09a8\u09be
 make.new.user=\u09a8\u09a4\u09c1\u09a8 \u09ac\u09cd\u09af\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0
 maritalSts=\u09ac\u09c8\u09ac\u09be\u09b9\u09bf\u0995 \u0985\u09ac\u09b8\u09cd\u09a5\u09be
 marriageDate=\u09ac\u09bf\u09ac\u09be\u09b9 \u09a4\u09be\u09b0\u09bf\u0996
@@ -185,16 +196,16 @@ nickName=\u09a1\u09be\u0995 \u09a8\u09be\u09ae
 nid=\u099c\u09be\u09a4\u09c0\u09af\u09bc \u09aa\u09b0\u09bf\u099a\u09af\u09bc\u09aa\u09a4\u09cd\u09b0
 noOfChild=\u09b8\u09a8\u09cd\u09a4\u09be\u09a8 \u09b8\u0982\u0996\u09cd\u09af\u09be
 notifiedTo=Notified To
-org=Org
+org=\u09b8\u0982\u09b8\u09cd\u09a5\u09be
 orgUnitType=Org Unit Type
-originatedBy=Originated By
+originatedBy=\u0989\u09a6\u09cd\u09a6\u09c0\u09aa\u09bf\u09a4
 paramName=Param Name
 paramType=Param Type
-params=Params
-passingYear=Passing Year
+params=\u09b8\u09cd\u09a5\u09bf\u09a4\u09bf\u09ae\u09be\u09aa
+passingYear=\u09aa\u09b0\u09c0\u0995\u09cd\u09b7\u09be\u09af\u09bc \u0989\u09a4\u09cd\u09a4\u09c0\u09b0\u09cd\u09a3 \u09ac\u099b\u09b0
 password=\u09aa\u09be\u09b8\u0993\u09af\u09bc\u09be\u09b0\u09cd\u09a1
 payrollArea=Payroll Area
-pct=Pct
+pct=\u09b6\u09a4\u0995\u09b0\u09be \u09b9\u09be\u09b0
 personnelArea=Personnel Area
 personnelSubarea=Personnel Subarea
 phone=\u09a6\u09c1\u09b0\u09be\u09b2\u09be\u09aa\u09a8\u09c0 
@@ -205,21 +216,23 @@ profile=\u099c\u09c0\u09ac\u09a8 \u09ac\u09c3\u09a4\u09cd\u09a4\u09be\u09a8\u09c
 profileEduDtls=Profile Edu Dtls
 profileJobDtls=Profile Job Dtls
 profilePicFile=\u099b\u09ac\u09bf
-property=Property
-recommendBy=Recommend By
+property=\u09ac\u09c8\u09b6\u09bf\u09b7\u09cd\u099f\u09cd\u09af
+recommendBy=\u09b8\u09c1\u09aa\u09be\u09b0\u09bf\u09b6
 religion=\u09a7\u09b0\u09cd\u09ae
 remarks=\u09ae\u09a8\u09cd\u09a4\u09ac\u09cd\u09af
-root=Root
+reportGroup=\u09aa\u09cd\u09b0\u09a4\u09bf\u09ac\u09c7\u09a6\u09a8 \u0997\u09cd\u09b0\u09c1\u09aa
+root=\u09ae\u09c2\u09b2
 rootHead=Root Head
 sal=\u09ac\u09c7\u09a4\u09a8
-salesGroup=Sales Group
-salesOffice=Sales Office
+salesGroup=\u09b8\u09c7\u09b2\u09b8 \u0997\u09cd\u09b0\u09c1\u09aa
+salesOffice=\u09ac\u09bf\u0995\u09cd\u09b0\u09af\u09bc \u0985\u09ab\u09bf\u09b8
 slNo=\u09b8\u09bf\u09b0\u09bf\u09df\u09be\u09b2 \u09a8\u0982 
 startDate=\u09b6\u09c1\u09b0\u09c1\u09b0 \u09a4\u09be\u09b0\u09bf\u0996
 state=\u09aa\u09cd\u09b0\u09a6\u09c7\u09b6
 street=\u09b0\u09be\u09b8\u09cd\u09a4\u09be
-submitDate=Submit Date
-submittedBy=Submitted By
+submitDate=\u09a6\u09be\u0996\u09bf\u09b2 \u09a4\u09be\u09b0\u09bf\u0996
+submittedBy=\u099c\u09ae\u09be\u09a6\u09be\u09a8\u0995\u09be\u09b0\u09c0
+supportFormats=\u09b8\u09be\u09aa\u09cb\u09b0\u09cd\u099f \u09ab\u09b0\u09ae\u09cd\u09af\u09be\u099f
 text=Text
 title=\u09b6\u09bf\u09b0\u09cb\u09a8\u09be\u09ae
 user=\u09ac\u09cd\u09af\u09be\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0
@@ -238,6 +251,7 @@ updateByUser=\u09aa\u09b0\u09bf\u09ac\u09b0\u09cd\u09a4\u09a8\u0995\u09be\u09b0\
 updateDate=\u09aa\u09b0\u09bf\u09ac\u09b0\u09cd\u09a4\u09a8\u09c7\u09b0 \u09a4\u09be\u09b0\u09bf\u0996
 
 default.foundRec=\u09aa\u09be\u0993\u09df\u09be \u0997\u09c7\u099b\u09c7 {0} \u09b0\u09c7\u0995\u09b0\u09cd\u09a1
+default.open.in.new.page=\u09a8\u09a4\u09c1\u09a8 \u09aa\u09c3\u09b7\u09cd\u09a0\u09be\u09af\u09bc \u0996\u09cb\u09b2\u09be
 
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
@@ -268,7 +282,8 @@ default.updated.message={0} {1} updated
 default.deleted.message={0} {1} deleted
 default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
-default.optimistic.locking.failure=Another user has updated this {0} while you were editing
+default.optimistic.locking.failure.edit=\u0986\u09b0 \u098f\u0995\u099c\u09a8 \u09ac\u09cd\u09af\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0 \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8\u09be \u0995\u09b0\u09c7\u099b\u09c7, \u09af\u0996\u09a8 \u0986\u09aa\u09a8\u09bf \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8\u09be \u0995\u09b0\u099b\u09c7\u09a8
+default.optimistic.locking.failure.copy=\u0986\u09b0 \u098f\u0995\u099c\u09a8 \u09ac\u09cd\u09af\u09ac\u09b9\u09be\u09b0\u0995\u09be\u09b0\u09c0 \u09b8\u09ae\u09cd\u09aa\u09be\u09a6\u09a8\u09be \u0995\u09b0\u09c7\u099b\u09c7, \u09af\u0996\u09a8 \u0986\u09aa\u09a8\u09bf \u0995\u09aa\u09bf \u0995\u09b0\u099b\u09c7\u09a8
 
 default.home.label=\u09ac\u09be\u09a1\u09bc\u09bf
 default.list.label={0} \u09a4\u09be\u09b2\u09bf\u0995\u09be
