--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -1,3 +1,22 @@
+label.allEnum.title.ADV=Adv 
+label.allEnum.title.DR=Dr
+label.allEnum.title.MR=Mr 
+label.allEnum.title.MASTER=Master
+label.allEnum.title.ESQUIRE=Esquire 
+label.allEnum.title.SIR=Sir
+label.allEnum.title.SIRE=Sire 
+label.allEnum.title.LORD=Lord
+label.allEnum.title.MRS=Mrs 
+label.allEnum.title.MISS=Miss
+label.allEnum.title.MS=Ms 
+label.allEnum.title.MISTRESS=Mistress
+label.allEnum.title.MADAM=Madam 
+label.allEnum.title.MAAM=Maam
+label.allEnum.title.DAME=Dame 
+label.allEnum.title.LADY=Lady
+label.allEnum.title.MX=Mx 
+label.allEnum.title.PROF=Prof
+
 label.lookup.lookupKeyword.EDUCATION=Education
 label.lookup.lookupKeyword.PROFESSION=Profession
 
