--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -1,3 +1,22 @@
+label.allEnum.title.ADV=Adv 
+label.allEnum.title.DR=\u09a1\u09be\u0983
+label.allEnum.title.MR=\u099c\u09a8\u09be\u09ac 
+label.allEnum.title.MASTER=Master
+label.allEnum.title.ESQUIRE=Esquire 
+label.allEnum.title.SIR=Sir
+label.allEnum.title.SIRE=Sire 
+label.allEnum.title.LORD=Lord
+label.allEnum.title.MRS=\u099c\u09a8\u09be\u09ac\u09be
+label.allEnum.title.MISS=\u09ae\u09bf\u09b8\u09cd
+label.allEnum.title.MS=\u09b6\u09cd\u09b0\u09c0\u09ae\u09a4\u09bf 
+label.allEnum.title.MISTRESS=Mistress
+label.allEnum.title.MADAM=Madam 
+label.allEnum.title.MAAM=Maam
+label.allEnum.title.DAME=Dame 
+label.allEnum.title.LADY=\u09ad\u09a6\u09cd\u09b0\u09ae\u09b9\u09bf\u09b2\u09be
+label.allEnum.title.MX=Mx 
+label.allEnum.title.PROF=\u0985\u09a7\u09cd\u09af\u09be\u09aa\u0995
+
 label.lookup.lookupKeyword.EDUCATION=\u09b6\u09bf\u0995\u09cd\u09b7\u09be
 label.lookup.lookupKeyword.PROFESSION=\u09aa\u09c7\u09b6\u09be
 
