--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -262,6 +262,8 @@ web=Web
 webAddress=Web Address
 weight=Weight
 zip=Zip
+companyCode=Legal Entity
+company=Group of Company
 
 #audit
 insertByUser=Insert By User
