--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -262,6 +262,8 @@ web=Web
 webAddress=\u0997\u0997\u09a8 \u09a0\u09bf\u0995\u09be\u09a8\u09be 
 weight=\u0993\u099c\u09a8
 zip=\u099c\u09bf\u09aa
+companyCode=Legal Entity
+company=Group of Company
 
 #audit
 insertByUser=\u09b2\u09bf\u09aa\u09bf\u09ac\u09a6\u09cd\u09a7\u0995\u09be\u09b0\u09c0
