--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -264,6 +264,9 @@ weight=Weight
 zip=Zip
 companyCode=Legal Entity
 company=Group of Company
+module=Module
+report=Report
+process=Process
 
 #audit
 insertByUser=Insert By User
@@ -291,6 +294,7 @@ default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot 
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
 
+default.select.null=Select One
 default.paginate.prev=Previous
 default.paginate.next=Next
 default.boolean.true=Yeap
