--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -264,6 +264,9 @@ weight=\u0993\u099c\u09a8
 zip=\u099c\u09bf\u09aa
 companyCode=Legal Entity
 company=Group of Company
+module=\u09ae\u09a1\u09bf\u0989\u09b2
+report=\u09aa\u09cd\u09b0\u09a4\u09bf\u09ac\u09c7\u09a6\u09a8
+process=\u09aa\u09cd\u09b0\u0995\u09cd\u09b0\u09bf\u09af\u09bc\u09be
 
 #audit
 insertByUser=\u09b2\u09bf\u09aa\u09bf\u09ac\u09a6\u09cd\u09a7\u0995\u09be\u09b0\u09c0
@@ -291,8 +294,9 @@ default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot 
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
 
-default.paginate.prev=Previous
-default.paginate.next=Next
+default.select.null=\u098f\u0995\u099f\u09be \u09a8\u09bf\u09b0\u09cd\u09ac\u09be\u099a\u09a8 \u0995\u09b0\u09c1\u09a8
+default.paginate.prev=\u09aa\u09c2\u09b0\u09cd\u09ac\u09ac\u09b0\u09cd\u09a4\u09c0
+default.paginate.next=\u09aa\u09b0\u09ac\u09b0\u09cd\u09a4\u09c0
 default.boolean.true=\u09b9\u09be\u0981
 default.boolean.false=\u09a8\u09be
 default.date.format=dd/MM/yyyy
