--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -267,6 +267,9 @@ company=Group of Company
 module=Module
 report=Report
 process=Process
+forgotPassword=Forgot Password?
+needhelp=Need Help?
+cancel=Cancel
 
 #audit
 insertByUser=Insert By User
