--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -267,6 +267,9 @@ company=Group of Company
 module=\u09ae\u09a1\u09bf\u0989\u09b2
 report=\u09aa\u09cd\u09b0\u09a4\u09bf\u09ac\u09c7\u09a6\u09a8
 process=\u09aa\u09cd\u09b0\u0995\u09cd\u09b0\u09bf\u09af\u09bc\u09be
+forgotPassword=\u09aa\u09be\u09b8\u0993\u09af\u09bc\u09be\u09b0\u09cd\u09a1 \u09ad\u09c1\u09b2\u09c7 \u0997\u09c7\u099b\u09c7\u09a8?
+needhelp=\u09b8\u09be\u09b9\u09be\u09af\u09cd\u09af \u09a6\u09b0\u0995\u09be\u09b0?
+cancel=\u09ac\u09be\u09a4\u09bf\u09b2
 
 #audit
 insertByUser=\u09b2\u09bf\u09aa\u09bf\u09ac\u09a6\u09cd\u09a7\u0995\u09be\u09b0\u09c0
