--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -270,6 +270,8 @@ process=Process
 forgotPassword=Forgot Password?
 needhelp=Need Help?
 cancel=Cancel
+fixed.Parameter=Parameter
+reportFormat=Report Format
 
 #audit
 insertByUser=Insert By User
