--- a/src/main/webapp/i18n/messages.properties
+++ b/src/main/webapp/i18n/messages.properties
@@ -272,6 +272,7 @@ needhelp=Need Help?
 cancel=Cancel
 fixed.Parameter=Parameter
 reportFormat=Report Format
+search.Parameter=Search Parameter
 
 #audit
 insertByUser=Insert By User
