--- a/src/main/webapp/i18n/messages_bn_BD.properties
+++ b/src/main/webapp/i18n/messages_bn_BD.properties
@@ -272,6 +272,7 @@ needhelp=\u09b8\u09be\u09b9\u09be\u09af\u09cd\u09af \u09a6\u09b0\u0995\u09be\u09
 cancel=\u09ac\u09be\u09a4\u09bf\u09b2
 fixed.Parameter=\u09a7\u09cd\u09b0\u09c1\u09ac\u0995\u09ac\u09bf\u09b6\u09c7\u09b7
 reportFormat=\u09aa\u09cd\u09b0\u09a4\u09bf\u09ac\u09c7\u09a6\u09a8 \u09aa\u09cd\u09b0\u0995\u09b0\u09a3
+search.Parameter=\u0985\u09a8\u09c1\u09b8\u09a8\u09cd\u09a7\u09be\u09a8 \u09a7\u09cd\u09b0\u09c1\u09ac\u0995\u09ac\u09bf\u09b6\u09c7\u09b7
 
 #audit
 insertByUser=\u09b2\u09bf\u09aa\u09bf\u09ac\u09a6\u09cd\u09a7\u0995\u09be\u09b0\u09c0
